Bug#31542 ndb_mgm -e "all report mem" does not print output to stdout  - Add new mgmapi function 'ndb_mgm_dump_events' which can be    used to order BackupStatus and MemoryUsage event reports  - Implement support for requesting events in ndb_mgmd and    ndbd  - Add tests for  ndb_mgm -e "<ALL|nodeid> REPORT <MEMORYUSAGE|BACKUPSTATUS>" to ndb_mgm.testMgm.cpp  - Add test for ndb_mgmds new 'get events' command  - Extend DUMP_STATE_ORD for NDB_LE_BackupStats and     NDB_LE_MemoryUsage to take a second parameter which     is the ref where to send the EVENT_REP