storage/ndb/src/kernel/blocks/backup/Backup.cpp
@@ -395,18 +395,22 @@ Backup::execDUMP_STATE_ORD(Signal* signal)
   switch (signal->theData[0]) {
   case DumpStateOrd::BackupStatus:
   {
+    BlockReference result_ref = CMVMI_REF;
+    if (signal->length() == 2)
+      result_ref = signal->theData[1];
+
     BackupRecordPtr ptr;
     int reported = 0;
     for(c_backups.first(ptr); ptr.i != RNIL; c_backups.next(ptr))
     {
       if (!ptr.p->is_lcp())
       {
-        reportStatus(signal, ptr);
+        reportStatus(signal, ptr, result_ref);
         reported++;
       }
     }
     if (!reported)
-      reportStatus(signal, ptr);
+      reportStatus(signal, ptr, result_ref);
     return;
   }
   default:
@@ -2481,7 +2485,8 @@ Backup::checkReportStatus(Signal *signal, BackupRecordPtr ptr)
 }
 
 void
-Backup::reportStatus(Signal* signal, BackupRecordPtr ptr)
+Backup::reportStatus(Signal* signal, BackupRecordPtr ptr,
+                     BlockReference ref)
 {
   const int signal_length = 11;
 
@@ -2493,7 +2498,7 @@ Backup::reportStatus(Signal* signal, BackupRecordPtr ptr)
       (ptr.p->m_gsn == 0 &&
        ptr.p->masterData.gsn == 0))
   {
-    sendSignal(CMVMI_REF, GSN_EVENT_REP, signal, signal_length, JBB);
+    sendSignal(ref, GSN_EVENT_REP, signal, signal_length, JBB);
     return;
   }
   signal->theData[1] = ptr.p->clientRef;
@@ -2501,7 +2506,7 @@ Backup::reportStatus(Signal* signal, BackupRecordPtr ptr)
 
   if (ptr.p->dataFilePtr == RNIL)
   {
-    sendSignal(CMVMI_REF, GSN_EVENT_REP, signal, signal_length, JBB);
+    sendSignal(ref, GSN_EVENT_REP, signal, signal_length, JBB);
     return;
   }
 
@@ -2514,7 +2519,7 @@ Backup::reportStatus(Signal* signal, BackupRecordPtr ptr)
  
   if (ptr.p->logFilePtr == RNIL)
   {
-    sendSignal(CMVMI_REF, GSN_EVENT_REP, signal, signal_length, JBB);
+    sendSignal(ref, GSN_EVENT_REP, signal, signal_length, JBB);
     return;
   }
 
@@ -2525,7 +2530,7 @@ Backup::reportStatus(Signal* signal, BackupRecordPtr ptr)
   signal->theData[9] = (Uint32)(logFilePtr.p->operation.m_records_total & 0xFFFFFFFF);
   signal->theData[10]= (Uint32)(logFilePtr.p->operation.m_records_total >> 32);
 
-  sendSignal(CMVMI_REF, GSN_EVENT_REP, signal, signal_length, JBB);
+  sendSignal(ref, GSN_EVENT_REP, signal, signal_length, JBB);
 }
 
 /*****************************************************************************
